# reflex

./: .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  building.md  configuration.md  counters.md  getting-started.md  introduction.md  keybindings.md  minimap.md  navigation.md  overlay.md  pipeline-viewer.md  queues.md  trace-formats.md
resources/: Info.plist  reflex.icns
scripts/: bundle-macos.sh
src/: app.rs  config.rs  main.rs  session.rs  title_bar.rs  wcp.rs
src/interaction/: actions.rs  keybindings.rs  menus.rs  mod.rs  viewport.rs
src/theme/: colors.rs
src/trace/: generator.rs  konata.rs  mod.rs  model.rs  uscope_source.rs
src/views/: buffer_panel.rs  counter_panel.rs  goto_bar.rs  help_overlay.rs  info_overlay.rs  label_pane.rs  log_panel.rs  minimap_view.rs  mod.rs  pipeline_panel.rs  queue_panel.rs  render_util.rs  search_bar.rs  status_bar.rs  timeline_pane.rs
test_data/: sample.uscope
