[package]
name = "reflex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2 = "0.6.3"
